change few functions

--- a/index.html
+++ b/index.html
@@ -24,3 +24,23 @@
 </body>
 
 </html>
+
+
+<!-- <!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	   <ul>
+       <li>
+           <span class="display">erum</span>
+           <input type="text" class="edit" style="display:none"/>
+       </li>
+       <li>
+           <span class="display">ingress</span>
+           <input type="text" class="edit" style="display:none"/>
+       </li>
+   </ul>
+</body> -->
+</html>
